exports[`invalid(1): {\"engines\": {\"npm\": \">=10\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": ">=10"}}

`;

exports[`invalid(1): {\"engines\": {\"npm\": \">=10\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": ">=10"}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/2: Remove the engine.:
  1 | {}

Suggestion 2/2: Set \`packageManager\` to \`npm@10.0.0\`.:
  1 | {"packageManager": "npm@10.0.0"}

`;

exports[`invalid(10): {\"packageManager\": true, \"engines\": {\"npm\": \">=10\"}} 1`] = `

[Input]
  1 | {"packageManager": true, "engines": {"npm": ">=10"}}

`;

exports[`invalid(10): {\"packageManager\": true, \"engines\": {\"npm\": \">=10\"}} 2`] = `

Message:
> 1 | {"packageManager": true, "engines": {"npm": ">=10"}}
    |                                      ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {"packageManager": true}

`;

exports[`invalid(11): {\"engines\": {\"npm\": \"<11\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": "<11"}}

`;

exports[`invalid(11): {\"engines\": {\"npm\": \"<11\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": "<11"}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {}

`;

exports[`invalid(12): {\"engines\": {\"npm\": \">=10 <11\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": ">=10 <11"}}

`;

exports[`invalid(12): {\"engines\": {\"npm\": \">=10 <11\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": ">=10 <11"}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/2: Remove the engine.:
  1 | {}

Suggestion 2/2: Set \`packageManager\` to \`npm@10.0.0\`.:
  1 | {"packageManager": "npm@10.0.0"}

`;

exports[`invalid(13): {\"engines\": {\"npm\": \">10\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": ">10"}}

`;

exports[`invalid(13): {\"engines\": {\"npm\": \">10\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": ">10"}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/2: Remove the engine.:
  1 | {}

Suggestion 2/2: Set \`packageManager\` to \`npm@11.0.0\`.:
  1 | {"packageManager": "npm@11.0.0"}

`;

exports[`invalid(14): {\"engines\": {\"npm\": \"10.2\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": "10.2"}}

`;

exports[`invalid(14): {\"engines\": {\"npm\": \"10.2\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": "10.2"}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/2: Remove the engine.:
  1 | {}

Suggestion 2/2: Set \`packageManager\` to \`npm@10.2.0\`.:
  1 | {"packageManager": "npm@10.2.0"}

`;

exports[`invalid(15): {\"engines\": {\"npm\": \">=10.0.0-beta.1\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": ">=10.0.0-beta.1"}}

`;

exports[`invalid(15): {\"engines\": {\"npm\": \">=10.0.0-beta.1\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": ">=10.0.0-beta.1"}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/2: Remove the engine.:
  1 | {}

Suggestion 2/2: Set \`packageManager\` to \`npm@10.0.0-beta.1\`.:
  1 | {"packageManager": "npm@10.0.0-beta.1"}

`;

exports[`invalid(16): {\"engines\": {\"npm\": \">=10 || *\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": ">=10 || *"}}

`;

exports[`invalid(16): {\"engines\": {\"npm\": \">=10 || *\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": ">=10 || *"}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {}

`;

exports[`invalid(17): {\"engines\": {\n\t\"node\": \">=18\",\n\t\"npm\": \">=10\"\n}} 1`] = `

[Input]
  1 | {"engines": {
  2 | 	"node": ">=18",
  3 | 	"npm": ">=10"
  4 | }}

`;

exports[`invalid(17): {\"engines\": {\n\t\"node\": \">=18\",\n\t\"npm\": \">=10\"\n}} 2`] = `

Message:
  1 | {"engines": {
  2 | 	"node": ">=18",
> 3 | 	"npm": ">=10"
    | 	^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.
  4 | }}

Suggestion 1/2: Remove the engine.:
  1 | {"engines": {
  2 | 	"node": ">=18"
  3 | }}

Suggestion 2/2: Set \`packageManager\` to \`npm@10.0.0\`.:
  1 | {"engines": {
  2 | 	"node": ">=18"
  3 | }, "packageManager": "npm@10.0.0"}

`;

exports[`invalid(18): {\r\n\t\"engines\": {\r\n\t\t\"node\": \">=18\",\r\n\t\t\"npm\": \">=10\"\r\n\t}\r\n} 1`] = `

[Input]
  1 | {
  2 | 	"engines": {
  3 | 		"node": ">=18",
  4 | 		"npm": ">=10"
  5 | 	}
  6 | }

`;

exports[`invalid(18): {\r\n\t\"engines\": {\r\n\t\t\"node\": \">=18\",\r\n\t\t\"npm\": \">=10\"\r\n\t}\r\n} 2`] = `

Message:
  1 | {
  2 | 	"engines": {
  3 | 		"node": ">=18",
> 4 | 		"npm": ">=10"
    | 		^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.
  5 | 	}
  6 | }

Suggestion 1/2: Remove the engine.:
  1 | {
  2 | 	"engines": {
  3 | 		"node": ">=18"
  4 | 	}
  5 | }

Suggestion 2/2: Set \`packageManager\` to \`npm@10.0.0\`.:
  1 | {
  2 | 	"engines": {
  3 | 		"node": ">=18"
  4 | 	},
  5 | 	"packageManager": "npm@10.0.0"
  6 | }

`;

exports[`invalid(19): {\"engines\": {\"npm\": \"*\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": "*"}}

`;

exports[`invalid(19): {\"engines\": {\"npm\": \"*\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": "*"}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {}

`;

exports[`invalid(2): {\"engines\": {\"yarn\": \">=4\"}} 1`] = `

[Input]
  1 | {"engines": {"yarn": ">=4"}}

`;

exports[`invalid(2): {\"engines\": {\"yarn\": \">=4\"}} 2`] = `

Message:
> 1 | {"engines": {"yarn": ">=4"}}
    |              ^^^^^^ Specify the \`yarn\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/2: Remove the engine.:
  1 | {}

Suggestion 2/2: Set \`packageManager\` to \`yarn@4.0.0\`.:
  1 | {"packageManager": "yarn@4.0.0"}

`;

exports[`invalid(20): {\"engines\": {\"npm\": \"\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": ""}}

`;

exports[`invalid(20): {\"engines\": {\"npm\": \"\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": ""}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {}

`;

exports[`invalid(21): {\"engines\": {\"npm\": \"latest\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": "latest"}}

`;

exports[`invalid(21): {\"engines\": {\"npm\": \"latest\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": "latest"}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {}

`;

exports[`invalid(22): {\"engines\": {\"npm\": true}} 1`] = `

[Input]
  1 | {"engines": {"npm": true}}

`;

exports[`invalid(22): {\"engines\": {\"npm\": true}} 2`] = `

Message:
> 1 | {"engines": {"npm": true}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {}

`;

exports[`invalid(3): {\"engines\": {\"pnpm\": \">=9\"}} 1`] = `

[Input]
  1 | {"engines": {"pnpm": ">=9"}}

`;

exports[`invalid(3): {\"engines\": {\"pnpm\": \">=9\"}} 2`] = `

Message:
> 1 | {"engines": {"pnpm": ">=9"}}
    |              ^^^^^^ Specify the \`pnpm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/2: Remove the engine.:
  1 | {}

Suggestion 2/2: Set \`packageManager\` to \`pnpm@9.0.0\`.:
  1 | {"packageManager": "pnpm@9.0.0"}

`;

exports[`invalid(4): {\"engines\": {\"bun\": \">=1\"}} 1`] = `

[Input]
  1 | {"engines": {"bun": ">=1"}}

`;

exports[`invalid(4): {\"engines\": {\"bun\": \">=1\"}} 2`] = `

Message:
> 1 | {"engines": {"bun": ">=1"}}
    |              ^^^^^ Specify the \`bun\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/2: Remove the engine.:
  1 | {}

Suggestion 2/2: Set \`packageManager\` to \`bun@1.0.0\`.:
  1 | {"packageManager": "bun@1.0.0"}

`;

exports[`invalid(5): {\n\t\t\t\"engines\": {\n\t\t\t\t\"node\": \">=18\",\n\t\t\t\t\"npm\": \">=10\"\n\t\t\t}\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"engines": {
  3 | 				"node": ">=18",
  4 | 				"npm": ">=10"
  5 | 			}
  6 | 		}

`;

exports[`invalid(5): {\n\t\t\t\"engines\": {\n\t\t\t\t\"node\": \">=18\",\n\t\t\t\t\"npm\": \">=10\"\n\t\t\t}\n\t\t} 2`] = `

Message:
  1 | {
  2 | 			"engines": {
  3 | 				"node": ">=18",
> 4 | 				"npm": ">=10"
    | 				^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.
  5 | 			}
  6 | 		}

Suggestion 1/2: Remove the engine.:
  1 | {
  2 | 			"engines": {
  3 | 				"node": ">=18"
  4 | 			}
  5 | 		}

Suggestion 2/2: Set \`packageManager\` to \`npm@10.0.0\`.:
  1 | {
  2 | 			"engines": {
  3 | 				"node": ">=18"
  4 | 			},
  5 | 			"packageManager": "npm@10.0.0"
  6 | 		}

`;

exports[`invalid(6): {\n\t\t\t\"engines\": {\n\t\t\t\t\"node\": \">=24\",\n\t\t\t\t\"npm\": \">=11\"\n\t\t\t}\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"engines": {
  3 | 				"node": ">=24",
  4 | 				"npm": ">=11"
  5 | 			}
  6 | 		}

`;

exports[`invalid(6): {\n\t\t\t\"engines\": {\n\t\t\t\t\"node\": \">=24\",\n\t\t\t\t\"npm\": \">=11\"\n\t\t\t}\n\t\t} 2`] = `

Message:
  1 | {
  2 | 			"engines": {
  3 | 				"node": ">=24",
> 4 | 				"npm": ">=11"
    | 				^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.
  5 | 			}
  6 | 		}

Suggestion 1/2: Remove the engine.:
  1 | {
  2 | 			"engines": {
  3 | 				"node": ">=24"
  4 | 			}
  5 | 		}

Suggestion 2/2: Set \`packageManager\` to \`npm@11.0.0\`.:
  1 | {
  2 | 			"engines": {
  3 | 				"node": ">=24"
  4 | 			},
  5 | 			"packageManager": "npm@11.0.0"
  6 | 		}

`;

exports[`invalid(7): {\n\t\t\t\"name\": \"foo\",\n\t\t\t\"engines\": {\n\t\t\t\t\"npm\": \">=11\",\n\t\t\t\t\"node\": \">=24\"\n\t\t\t},\n\t\t\t\"scripts\": {}\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"name": "foo",
  3 | 			"engines": {
  4 | 				"npm": ">=11",
  5 | 				"node": ">=24"
  6 | 			},
  7 | 			"scripts": {}
  8 | 		}

`;

exports[`invalid(7): {\n\t\t\t\"name\": \"foo\",\n\t\t\t\"engines\": {\n\t\t\t\t\"npm\": \">=11\",\n\t\t\t\t\"node\": \">=24\"\n\t\t\t},\n\t\t\t\"scripts\": {}\n\t\t} 2`] = `

Message:
  1 | {
  2 | 			"name": "foo",
  3 | 			"engines": {
> 4 | 				"npm": ">=11",
    | 				^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.
  5 | 				"node": ">=24"
  6 | 			},
  7 | 			"scripts": {}
  8 | 		}

Suggestion 1/2: Remove the engine.:
  1 | {
  2 | 			"name": "foo",
  3 | 			"engines": {
  4 | 				"node": ">=24"
  5 | 			},
  6 | 			"scripts": {}
  7 | 		}

Suggestion 2/2: Set \`packageManager\` to \`npm@11.0.0\`.:
  1 | {
  2 | 			"name": "foo",
  3 | 			"engines": {
  4 | 				"node": ">=24"
  5 | 			},
  6 | 			"packageManager": "npm@11.0.0",
  7 | 			"scripts": {}
  8 | 		}

`;

exports[`invalid(8): {\"engines\": {\"npm\": \">=10\", \"yarn\": \">=4\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": ">=10", "yarn": ">=4"}}

`;

exports[`invalid(8): {\"engines\": {\"npm\": \">=10\", \"yarn\": \">=4\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": ">=10", "yarn": ">=4"}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {"engines": {"yarn": ">=4"}}

`;

exports[`invalid(8): {\"engines\": {\"npm\": \">=10\", \"yarn\": \">=4\"}} 3`] = `

Message:
> 1 | {"engines": {"npm": ">=10", "yarn": ">=4"}}
    |                             ^^^^^^ Specify the \`yarn\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {"engines": {"npm": ">=10"}}

`;

exports[`invalid(9): {\"packageManager\": \"npm@10.0.0\", \"engines\": {\"npm\": \">=10\"}} 1`] = `

[Input]
  1 | {"packageManager": "npm@10.0.0", "engines": {"npm": ">=10"}}

`;

exports[`invalid(9): {\"packageManager\": \"npm@10.0.0\", \"engines\": {\"npm\": \">=10\"}} 2`] = `

Message:
> 1 | {"packageManager": "npm@10.0.0", "engines": {"npm": ">=10"}}
    |                                              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {"packageManager": "npm@10.0.0"}

`;
